[project]
name = "sanmou-report-analysis"
version = "0.1.0"
description = "A tool for capturing battle report screenshots and performing automated analysis for NSLG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pyqt5>=5.15.11",
    "pywin32>=311 ; sys_platform == 'win32'",
    "scipy>=1.17.1",
    "screeninfo>=0.8.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanmou_report_analysis"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["src"]
